0024452: TKOpenGl - Memory leak in OpenGl_ShaderManager